bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:4: error: ')' expected but 'else' found.
  } else {
    ^