bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  if ((a<0 && b>100)||(a>100 && b<0){
    return true
  } else {
    return false
  }
}